CSS/main.css
/*** 1.0 - CSS Reset ***/

/* Box sizing rules */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
    margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
    scroll-behavior: smooth;
}

/* Set core body defaults */
body {
    min-height: 100vh;
    text-rendering: optimizeSpeed;
    line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
    max-width: 100%;
    display: block;
    }

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
    font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}


/*** 2.0 - Variables ***/
:root {
    --font-family: "Poppins", sans-serif;
    --main-background-color: #F3F3F3;

    --primary-word-color: #519ACF;
    --primary-color: #519ACF;

    --box-shadow: 2px 2px 8px grey;
    --box-shadow-hover: 4px 4px 16px grey;

    --completed-background-color: #519ACF;
    --inprogress-background-color: #FFEA2C;
}


/*** 2.0 - General ***/
body {
    font-family: var(--font-family);
    background-color: var(--main-background-color);
}

.Main__Content {
    display: flex;
    padding: 10px 20px;
    margin-left: auto;
    margin-right: auto;
    min-height: 100vh;
    max-width: 1000px;
    flex-direction: column;
    gap: 20px;
}

.btn,
.textbox {
    border-radius: 6px;
    height: 40px;
}

.btn { 
    background-color: var(--primary-color);
    border-radius: 6px;
    border: 0;
    height: 40px;
    color: white;
    cursor: pointer;
}

.btn:hover,
.textbox:hover {
    box-shadow: var(--box-shadow);
}

.header {
    display: flex;
    flex: 1;
    justify-content: space-between
}

.main-header,
.tag-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 20px;
    align-items: center;
}

.title {
    font-weight: 800;
    font-size: 1.5rem;
}

/*** 3.0 - Navbar ***/

.Navbar__Wrapper {
    background-color: #FFF;
    box-shadow: var(--box-shadow);
}

.Navbar {
    background-color: #FFF;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    padding: 16px;
    font-family: sans-serif;
    color: white;
    gap: 20px;
    align-items: center;
}

.Navbar__Link {
    color: black;
    text-transform: uppercase;
    padding-right: 8px;
    cursor: pointer;
}

.Navbar__Link a {
    text-decoration: none;
    color: inherit;
}

.Navbar__Link:hover {
    color: var(--primary-word-color);
}

.Navbar__Link-brand {
    font-size: 1.2rem;
}

.Navbar__Link-brand:hover {
    color: black;
}

.Navbar__Items {
    display: flex;
    gap: 20px;
}

.Navbar__Items--right {
    margin-left:auto;
}

.Navbar__Link-toggle {
    display: none;
}

@media only screen and (max-width: 768px) {
    .Navbar__Items,
    .Navbar {
        flex-direction: column;
        align-items: flex-start;
    }

    .Navbar__Items {
        display:none;
    }
        
    .Navbar__Items--right {
        margin-left:0;
    }
        
    .Navbar__ToggleShow {
        display: flex;
        width: 100%;
    }

    .Navbar__Link {
        width: 100%;
    }

    .Navbar__Link.Navbar__Link-toggle {
        width: fit-content;
    }
        
    .Navbar__Link-toggle {
        align-self: flex-end;
        display: initial;
        position: absolute;
        cursor: pointer;
    } 
}

/* login page */
.login-page {
    display: flex;
    align-items: center;
    height: 100vh;
}

.login-page_left,
.login-page_right {
    flex: 1;
}

.login-page_left {
    background-image: url("../img/pexels-mentatdgt-1319854.jpg");
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

@media only screen and (max-width: 768px) {
    .login-page_left {
        display: none;
    }
}


.login-page_form {
    padding: 80px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.login-page_logo {
    width: 100px;
    height: 100px;
    background: grey;
    border: 1px solid black;
    border-radius: 50%;
    margin-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
}

.login-page_login {
    text-transform: uppercase;
}

.login-page_username,
.login-page_password {
    margin-bottom: 20px;
}

/* index page */

.search_bar {
    margin-top: 20px;
    display: flex;
    gap: 10px;
}

.search_bar .textbox {
    flex: 1;
}

/* carousel */
.carousel ul {
    list-style-type: none;
    padding-left: 0;
}

.carousel ul img {
    object-fit: cover;
    width: 100%;
    height: 300px;
    border-radius: 6px;
    display: none;
}

.carousel ul li.carousel-shown img {
    display: block;
}

@media only screen and (max-width: 768px) {
    .carousel ul img {
        height: 150px;
    }
}

/* category circle */
.quick_cat { 
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.circles-container {
    display: flex;
    flex: 0 0 180px;
    flex-wrap: nowrap;
    white-space: nowrap;
    flex-direction: row;
    overflow: hidden;
    gap: 5px;
}

.circles-container:hover {
    overflow-x: scroll;
}

.circles-container .circles {
    min-width: 150px;
    width: 150px;
    min-height: 150px;
    height: 150px;
    line-height: 150px;
    border-radius: 50%;
    color: white;
    text-align: center;
    background: black;
    cursor: pointer;
}

.circles-container .circles:hover {
    box-shadow: var(--box-shadow-hover);
}

@media only screen and (max-width: 768px) {
    .circles-container .circles {
        min-width: 100px;
        width: 100px;
        min-height: 100px;
        height: 100px;
        line-height: 100px;
    }
}

/* cards */
.cards {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.course-card-container {
    display: flex;
    flex-direction: column;
}

.course-card-container-overflow {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    white-space: nowrap;
    overflow: hidden;
    padding: 20px 2px;
    gap: 10px;
}

.course-card-container-overflow:hover {
    overflow-x: scroll;
}

.course-card {
    display: flex;
    flex-direction: column;
    height: 550px;
    min-width: 350px;
    border-radius: 6px;
    padding: 10px;
    box-shadow: var(--box-shadow);
    gap: 10px;
}

.course-card:hover {
    box-shadow: var(--box-shadow-hover);
}

.course-img img {
    border-radius: 6px;
}

.course-title {
    font-size: 1.2rem;
    font-weight: 600;
}

.course-type {
    font-size: 0.8rem;
}

.course-description {
    word-wrap: break-word;
    white-space: initial;
    min-width: 100px;
}

.course-tags-container {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
}

.course-tags {
    background-color: grey;
    border-radius: 6px;
    padding: 2px;
}

@media only screen and (max-width: 768px) {
    .course-card {
        height: 550px;
        min-width: 250px;
    }
}

.quick_banner {
    display: flex;
    gap: 20px;
    flex-direction: column;
}

.banner_container {
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.banner img {
    border-radius: 6px;
    box-shadow: var(--box-shadow);
    filter: brightness(50%);
    height: 300px;
    object-fit: cover;
    width: 100%;
}

.banner {
    position: relative;
    text-align: center;
    color: white;
    font-size: 2.5rem;
    font-weight: 600;
    box-shadow: var(--box-shadow);
    border-radius: 6px;
}

.quick_banner-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}


/* cards */

.overall-cards_container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 20px;
}

.overall-cards_wrapper {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: space-between;
}

.overall-cards_wrapper::after {
    content: "";
    flex: auto;
}

.overall-cards img {
    border-radius: 6px;
    box-shadow: var(--box-shadow);
    filter: brightness(50%);
    height: 300px;
    object-fit: cover;
}

.overall-cards img {
    height: 130px;
    width: 100%;
}

.overall-cards {
    position: relative;
    text-align: center;
    flex: 0 0 calc(25% - 20px);
    color: white;
    font-size: 1rem;
    font-weight: 600;
}

.overall-cards:hover {
    box-shadow: var(--box-shadow-hover);
    cursor: pointer;
}

.banner-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.status-label {
    padding: 2px 6px;
    position: absolute;
    top: 8px;
    right: 16px;
    font-size: 0.8rem;
    font-weight: 300;
    border-radius: 6px;
}

.status-label_complete,
.status-label_inprogress {
    color: white;
}

.main-header-label {
    padding: 2px 6px;
    font-size: 0.8rem;
    font-weight: 300;
    border-radius: 6px;
}

.status-label_complete {
    background-color: var(--completed-background-color);
}

.status-label_inprogress {
    background-color: var(--inprogress-background-color);
}

@media only screen and (max-width: 768px) {
    .overall-cards {
        flex: 0 0 calc(50% - 20px);
    }
    
    .overall-cards_wrapper::after {
        display: none;
    }
}

@media only screen and (max-width: 425px) {
    .overall-cards_wrapper {
        flex-direction: column;
    }
}

.action-container {
    display: flex;
    gap: 10px;
    justify-content: end;
    margin-top: 20px;
}

.action_button {
    border-radius: 6px;
    border: none;
    padding: 8px 20px;
    font-size: 0.8rem;
    cursor: pointer;
}

.action_button:hover {
    box-shadow: var(--box-shadow-hover);
}

.action_back {
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
}

.action_positive {
    background-color: var(--primary-color);
    color: white;
}

@media only screen and (max-width: 425px) {
    .action-container {
        flex-direction: column;
    }

    .action_back {
        order: 1;
    }
}

footer {
    margin-top: 120px;
    border-top: 1px solid grey;
    bottom: 0;
    padding: 5px 10px;
    text-align: right;
}

